deployment_scripts/puppet/spec/nfs-server/iptables.txt
# Generated by iptables-save v1.4.21 on Tue Dec  8 10:45:02 2015
*nat
:PREROUTING ACCEPT [521052:168692753]
:INPUT ACCEPT [235560:14133600]
:OUTPUT ACCEPT [111418:6860766]
:POSTROUTING ACCEPT [111645:6877677]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-POSTROUTING - [0:0]
:nova-api-PREROUTING - [0:0]
:nova-api-float-snat - [0:0]
:nova-api-snat - [0:0]
:nova-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A PREROUTING -j nova-api-PREROUTING
-A OUTPUT -j neutron-openvswi-OUTPUT
-A OUTPUT -j nova-api-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A POSTROUTING -j nova-api-POSTROUTING
-A POSTROUTING -j nova-postrouting-bottom
-A POSTROUTING -s 240.0.0.6/32 -m comment --comment masquerade-for-vrouter-namespace -j MASQUERADE
-A POSTROUTING -s 240.0.0.2/32 -m comment --comment masquerade-for-haproxy-namespace -j MASQUERADE
-A neutron-openvswi-snat -j neutron-openvswi-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-openvswi-snat
-A nova-api-snat -j nova-api-float-snat
-A nova-postrouting-bottom -j nova-api-snat
COMMIT
# Completed on Tue Dec  8 10:45:02 2015
# Generated by iptables-save v1.4.21 on Tue Dec  8 10:45:02 2015
*raw
:PREROUTING ACCEPT [9204780:1834435446]
:OUTPUT ACCEPT [7310803:1315925140]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A PREROUTING -p gre -m comment --comment "333 notrack gre" -j NOTRACK
-A OUTPUT -j neutron-openvswi-OUTPUT
COMMIT
# Completed on Tue Dec  8 10:45:02 2015
# Generated by iptables-save v1.4.21 on Tue Dec  8 10:45:02 2015
*mangle
:PREROUTING ACCEPT [9205383:1834511785]
:INPUT ACCEPT [7566931:1275206728]
:FORWARD ACCEPT [220660:8002689]
:OUTPUT ACCEPT [7311007:1315977272]
:POSTROUTING ACCEPT [7531667:1323979961]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-mark - [0:0]
:nova-api-POSTROUTING - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING
-A INPUT -j neutron-openvswi-INPUT
-A FORWARD -j neutron-openvswi-FORWARD
-A OUTPUT -j neutron-openvswi-OUTPUT
-A POSTROUTING -j neutron-openvswi-POSTROUTING
-A POSTROUTING -j nova-api-POSTROUTING
-A POSTROUTING -p udp -m udp --dport 514 -j CHECKSUM --checksum-fill
-A neutron-openvswi-PREROUTING -j neutron-openvswi-mark
COMMIT
# Completed on Tue Dec  8 10:45:02 2015
# Generated by iptables-save v1.4.21 on Tue Dec  8 10:45:02 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [632:23610]
:OUTPUT ACCEPT [19114:2966400]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
:nova-api-FORWARD - [0:0]
:nova-api-INPUT - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-local - [0:0]
:nova-filter-top - [0:0]
-A INPUT -j neutron-openvswi-INPUT
-A INPUT -j nova-api-INPUT
-A INPUT -p icmp -m comment --comment "000 accept all icmp requests" -j ACCEPT
-A INPUT -i lo -m comment --comment "001 accept all to lo interface" -j ACCEPT
-A INPUT -m comment --comment "002 accept related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.20.0.2/32 -p tcp -m multiport --sports 4369,5672,41055,55672,61613 -m comment --comment "003 remote rabbitmq " -j ACCEPT
-A INPUT -s 10.20.0.2/32 -p tcp -m multiport --sports 8140 -m comment --comment "004 remote puppet " -j ACCEPT
-A INPUT -i lo -p tcp -m multiport --sports 15672 -m comment --comment "005 local rabbitmq admin" -j ACCEPT
-A INPUT -p tcp -m multiport --sports 15672 -m comment --comment "006 reject non-local rabbitmq admin" -j DROP
-A INPUT -s 10.20.0.2/32 -p tcp -m multiport --dports 8888 -m comment --comment "007 tinyproxy" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 22 -m comment --comment "020 ssh" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 80,443 -m comment --comment "100 http" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 3306,3307,4567,4568,49000 -m comment --comment "101 mysql" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 4444 -m comment --comment "101 xtrabackup" -j ACCEPT
-A INPUT -d 192.168.0.0/24 -p tcp -m multiport --ports 5000,35357 -m comment --comment "102 keystone" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 8080,6000,6001,6002,49001 -m comment --comment "103 swift" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 9292,9191,8773 -m comment --comment "104 glance" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 8774,8775,8776,6080 -m comment --comment "105 nova " -j ACCEPT
-A INPUT -p tcp -m multiport --ports 4369,5672,5673,41055 -m comment --comment "106 rabbitmq " -j ACCEPT
-A INPUT -p tcp -m multiport --ports 11211 -m comment --comment "107 memcached tcp" -j ACCEPT
-A INPUT -p udp -m multiport --ports 11211 -m comment --comment "107 memcached udp" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 873 -m comment --comment "108 rsync" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 3260 -m comment --comment "109 iscsi " -j ACCEPT
-A INPUT -p tcp -m multiport --ports 9696 -m comment --comment "110 neutron " -j ACCEPT
-A INPUT -p udp -m multiport --ports 67 -m comment --comment "111 dhcp-server" -j ACCEPT
-A INPUT -p udp -m multiport --ports 53 -m comment --comment "111 dns-server" -j ACCEPT
-A INPUT -p udp -m multiport --ports 123 -m comment --comment "112 ntp-server" -j ACCEPT
-A INPUT -p udp -m multiport --ports 5404 -m comment --comment "113 corosync-input" -j ACCEPT
-A INPUT -p udp -m multiport --ports 5405 -m comment --comment "114 corosync-output" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 2224 -m comment --comment "115 pcsd-server" -j ACCEPT
-A INPUT -p udp -m multiport --ports 58882 -m comment --comment "116 openvswitch db" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 5666 -m comment --comment "117 nrpe-server" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m multiport --ports 16509 -m comment --comment "118 libvirt" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 49152:49215 -m comment --comment "119 libvirt migration" -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p tcp -m multiport --ports 5900:6100 -m comment --comment "120 vnc ports" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 8777 -m comment --comment "121 ceilometer" -j ACCEPT
-A INPUT -p tcp -m multiport --ports 111,2049 -m comment --comment "150 allow tcp access to nfs service" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8004 -m comment --comment "204 heat-api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8000 -m comment --comment "205 heat-api-cfn" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8003 -m comment --comment "206 heat-api-cloudwatch" -j ACCEPT
-A INPUT -p gre -m comment --comment "334 accept gre" -j ACCEPT
-A INPUT -p udp -m multiport --ports 4789 -m comment --comment "340 vxlan_udp_port" -j ACCEPT
-A INPUT -m comment --comment "999 drop all other requests" -j DROP
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-openvswi-FORWARD
-A FORWARD -j nova-filter-top
-A FORWARD -j nova-api-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-openvswi-OUTPUT
-A OUTPUT -j nova-filter-top
-A OUTPUT -j nova-api-OUTPUT
-A neutron-filter-top -j neutron-openvswi-local
-A neutron-openvswi-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
-A nova-api-INPUT -d 172.16.0.5/32 -p tcp -m tcp --dport 8775 -j ACCEPT
-A nova-filter-top -j nova-api-local
COMMIT
# Completed on Tue Dec  8 10:45:02 2015
